# fastapi-restly

./: .buildinfo  .buildinfo.bak  .gitignore  .pre-commit-config.yaml  AUTO_SCHEMA_README.md  AUTO_SCHEMA_SUMMARY.md  CHANGELOG.md  CHANGES  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  PRD.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TESTING.md  about.html  api_reference.html  auto_schema.html  changelog.html  class_based_views.html  custom_endpoints.html  customize.html  deploying.html  docker-run.sh  example_auto_schema.py  example_query_modifiers_v2.py  examples.html  existing.html  genindex.html  getting_started.html  howto.html  howto_compose_views_with_mixins.html  howto_custom_schema.html  howto_error_responses.html  howto_existing_project.html  (+32 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
0.7/: .buildinfo  about.html  api_reference.html  changelog.html  class_based_views.html  deploying.html  examples.html  genindex.html  getting_started.html  howto_compose_views_with_mixins.html  howto_custom_schema.html  howto_error_responses.html  howto_existing_project.html  howto_inheritance.html  howto_openapi.html  howto_override_endpoints.html  howto_query_modifiers.html  howto_react_admin.html  howto_relationship_idschema.html  howto_testing.html  howto_typing.html  index.html  newsletter.html  objects.inv  patterns.html  py-modindex.html  robots.txt  search.html  sitemap.xml  technical_details.html  the_handle_design.html  tutorial.html  tutorial_customizing.html  tutorial_overview.html  user_guide.html
0.8/: .buildinfo  about.html  api_reference.html  changelog.html  class_based_views.html  customize.html  deploying.html  examples.html  genindex.html  getting_started.html  howto_compose_views_with_mixins.html  howto_custom_schema.html  howto_error_responses.html  howto_existing_project.html  howto_inheritance.html  howto_openapi.html  howto_query_modifiers.html  howto_react_admin.html  howto_relationship_idschema.html  howto_response_schema.html  howto_testing.html  howto_typing.html  index.html  newsletter.html  patterns.html  py-modindex.html  robots.txt  search.html  searchindex.js  sitemap.xml  technical_details.html  tutorial.html  tutorial_customizing.html  tutorial_overview.html  user_guide.html
_sources/: about.md.txt  api_reference.md.txt  auto_schema.md.txt  class_based_views.md.txt  custom_endpoints.md.txt  deploying.md.txt  examples.md.txt  existing.md.txt  howto_compose_views_with_mixins.md.txt  howto_custom_schema.md.txt  howto_error_responses.md.txt  howto_existing_project.md.txt  howto_inheritance.md.txt  howto_openapi.md.txt  howto_query_modifiers.md.txt  howto_react_admin.md.txt  howto_relationship_idschema.md.txt  howto_response_schema.md.txt  howto_testing.md.txt  index.md.txt  patterns.md.txt  pytest_fixtures.md.txt  query_modifiers.md.txt  technical_details.md.txt  the_handle_design.md.txt  tutorial.md.txt  tutorial_overview.md.txt  user_guide.md.txt
_static/: custom.css  newsletter.js
api/: db.html  exc.html  exceptions.html  index.html  models.html  objects.html  query.html  schemas.html  testing.html  top_level.html  views.html
blog/: .buildinfo  genindex.html  index.html  objects.inv  posts.html  search.html  searchindex.js  sitemap.xml
blog-site/: conf.py  index.md
coverage/: class_index.html  function_index.html  index.html  status.json  summary.json  z_3d0f55c51d6a5d4b__exception_handlers_py.html  z_3d0f55c51d6a5d4b__pytest_fixtures_py.html  z_3d0f55c51d6a5d4b_pytest_fixtures_py.html  z_736ab820dd26a5f9___init___py.html  z_736ab820dd26a5f9__client_py.html  z_736ab820dd26a5f9__fixtures_py.html  z_98cd2f047414eb15__globals_py.html  z_98cd2f047414eb15__session_py.html  z_c777c12490177e92__async_py.html  z_c777c12490177e92__base_py.html  z_c777c12490177e92__openapi_py.html  z_c777c12490177e92__react_admin_py.html  z_c777c12490177e92__sync_py.html  z_eb2a55b14392408e__base_py.html  z_eb2a55b14392408e__generator_py.html  z_f87322ed642c1236__impl_py.html  z_f87322ed642c1236__shared_py.html
dev/: .buildinfo  about.html  api_reference.html  changelog.html  customize.html  (+36 more)
example-projects/blog/: .gitignore  README.md  alembic.ini  openapi.json  pyproject.toml
example-projects/blog/alembic/: env.py
example-projects/blog/alembic/versions/: 2517bf145e57_create_blog_tables.py  4e6f9c1ebb4a_init_blog.py
example-projects/blog/blog/: main.py  test_main.py
example-projects/blog/tests/: conftest.py  test_main.py
example-projects/saas/: README.md  pyproject.toml
example-projects/saas/app/: __init__.py  auth.py  main.py
example-projects/saas/app/models/: __init__.py  label.py  lookup.py  organization.py  outbox.py  project.py  task.py  upload.py  user.py
example-projects/saas/app/schemas/: __init__.py  label.py  lookup.py  organization.py  project.py  task.py  upload.py  user.py
example-projects/saas/app/views/: __init__.py  _base.py  _mixins.py  label.py  lookup.py  organization.py  project.py  task.py  upload.py  user.py
example-projects/saas/tests/: __init__.py  conftest.py  test_advanced.py  test_crud.py  test_crud_label.py  test_crud_organization.py  test_crud_project.py  test_crud_task.py  test_crud_user.py  test_fixture_dogfood.py  test_patterns.py  test_query.py
example-projects/shop/: .gitignore  README.md  main.py  openapi.json  pyproject.toml  pyrightconfig.json
example-projects/shop/alembic/: env.py
example-projects/shop/alembic/versions/: e65cfc57aa0b_update_shop_tables.py  e6c00f167d74_create_shop_tables.py
example-projects/shop/api/: pyproject.toml
example-projects/shop/api/alembic/versions/: e65cfc57aa0b_update_shop_tables.py
example-projects/shop/api/shop/: main.py
example-projects/shop/api/tests/: test_main.py
example-projects/shop/shop/: main.py
example-projects/shop/tests/: conftest.py  test_main.py  test_react_admin.py
example-projects/shop/ui/test-admin/: README.md  package-lock.json  package.json  playwright.config.ts
example-projects/shop/ui/test-admin/e2e/: shop.spec.ts
example-projects/shop/ui/test-admin/src/: App.tsx
(+360 files in other folders)
