[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-restly"
version = "0.6.0"
description = "A REST Framework for FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Rutger Prins", email = "rutgerprins@gmail.com" },
]
keywords = ["fastapi", "rest", "crud", "crud-api", "sqlalchemy", "pydantic", "api", "framework", "react-admin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.0",
    "orjson>=3.10.18",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.22",
]

[project.optional-dependencies]
standard = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
]
docs = [
    "ghp-import>=2.1.0",
    "myst-parser>=4.0.1",
    "pydata-sphinx-theme>=0.16.0",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.0",
    "sphinx-sitemap>=2.9.0",
]
testing = [
    "httpx>=0.27.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
]

[project.urls]
Homepage = "https://github.com/rjprins/fastapi-restly"
Repository = "https://github.com/rjprins/fastapi-restly"
Source = "https://github.com/rjprins/fastapi-restly"
Documentation = "https://rjprins.github.io/fastapi-restly/"
Issues = "https://github.com/rjprins/fastapi-restly/issues"
Changelog = "https://github.com/rjprins/fastapi-restly/blob/main/CHANGELOG.md"

[project.entry-points.pytest11]
fastapi_restly = "fastapi_restly.pytest_fixtures"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "ghp-import>=2.1.0",
    "httpx>=0.27.0",
    "ipython>=8.36.0",
    "myst-parser>=4.0.1",
    "pdbpp>=0.11.6",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
    "pydata-sphinx-theme>=0.16.0",
    "ruff>=0.11.10",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.0",
    "sphinx-sitemap>=2.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--ignore=example-projects"
xfail_strict = true
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Pydantic warns when Restly's ReadOnly/WriteOnly Annotated markers wrap fields
    # that also set Field(alias=...). The tests intentionally cover that supported
    # schema shape, and Restly preserves aliases in generated request/response models.
    "ignore:The .* attribute with value .* was provided to the `Field\\(\\)` function, which has no effect in the context it was used",
]

[tool.coverage.run]
branch = true
source = ["fastapi_restly"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["tests/*", "example-projects/*"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["I"]
fixable = ["I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi_restly", "fastapi_restly.*"]

[tool.setuptools.package-data]
fastapi_restly = ["py.typed"]
