[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-restly"
version = "0.7.0"
description = "A REST Framework for FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Rutger Prins", email = "rutgerprins@gmail.com" },
]
keywords = ["fastapi", "rest", "crud", "crud-api", "sqlalchemy", "pydantic", "api", "framework", "react-admin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.22",
]

[project.optional-dependencies]
# Runtime-only, mirrors fastapi[standard] (the `fastapi dev` server toolchain).
# Deliberately excludes test tooling (see `testing`) and any database driver:
# Restly is driver-agnostic, so install the async driver for your database
# directly (e.g. aiosqlite for SQLite, asyncpg/psycopg for PostgreSQL).
standard = [
    "fastapi[standard]>=0.115.0",
]
# Only the third-party deps Restly's shipped test helpers import: pytest +
# pytest-asyncio (the restly_* fixtures) and httpx (RestlyTestClient). Coverage
# tooling is a consumer policy choice, so pytest-cov is deliberately left out.
# Both httpx and httpx2 are pinned: Starlette's TestClient prefers httpx2 and
# warns when only httpx is present, while RestlyTestClient and older Starlette
# import httpx directly. Shipping both keeps consumers on the non-deprecated
# path across the Starlette versions in our supported range.
testing = [
    "httpx>=0.27.0",
    "httpx2>=2.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/rjprins/fastapi-restly"
Repository = "https://github.com/rjprins/fastapi-restly"
Source = "https://github.com/rjprins/fastapi-restly"
Documentation = "https://www.fastapi-restly.org/"
Issues = "https://github.com/rjprins/fastapi-restly/issues"
Changelog = "https://github.com/rjprins/fastapi-restly/blob/main/CHANGELOG.md"

[project.entry-points.pytest11]
fastapi_restly = "fastapi_restly.pytest_fixtures"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.27.0",
    "httpx2>=2.0.0",
    "ipython>=8.36.0",
    "myst-parser>=4.0.1",
    "pdbpp>=0.11.6",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
    "pydata-sphinx-theme>=0.16.0",
    "ruff>=0.11.10",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.0",
    "sphinx-reredirects>=0.1.3",
    "sphinx-sitemap>=2.9.0",
    "ablog>=0.11.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--ignore=example-projects"
xfail_strict = true
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Fail on any unexpected warning so dependency deprecations surface as red
    # CI instead of piling up in the summary. Add narrowly-scoped ignores below.
    "error",
    # Pydantic warns when Restly's ReadOnly/WriteOnly Annotated markers wrap fields
    # that also set Field(alias=...). The tests intentionally cover that supported
    # schema shape, and Restly preserves aliases in generated request/response models.
    "ignore:The .* attribute with value .* was provided to the `Field\\(\\)` function, which has no effect in the context it was used",
]

[tool.coverage.run]
branch = true
source = ["fastapi_restly"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["tests/*", "example-projects/*"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["I", "F401"]
fixable = ["I", "F401"]

# Alembic's revision template always emits `import sqlalchemy as sa` and
# `from alembic import op`; stub migrations leave them unused. Excluding
# generated migrations keeps regenerate-churn out of the lint.
[tool.ruff.lint.per-file-ignores]
"**/alembic/versions/*.py" = ["F401"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi_restly", "fastapi_restly.*"]

[tool.setuptools.package-data]
fastapi_restly = ["py.typed"]
