[project]
name = "blog"
version = "0.1.0"
description = "A minimal FastAPI-Alchemy example"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiosqlite>=0.21.0",
  "fastapi-alchemy",
  "pytest>=8.3.5",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.uv.sources]
fastapi-alchemy = { path = "../../", editable = true }

