[project]
name = "blog"
version = "0.1.0"
description = "A minimal FastAPI-Ding example"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-ding",
    "uvicorn[standard]>=0.32.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["blog"]

[tool.uv.sources]
fastapi-ding = { path = "../../", editable = true }

