[project]
name = "shop"
version = "0.1.0"
description = "A FastAPI-Alchemy example featuring customizations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiosqlite>=0.21.0",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.uv.dependencies]
"fastapi-alchemy" = { path = "../../..", develop = true }
