[tool.poetry]
name = "shop"
package-mode = false
description = "FastAPI-Alchemy example shop"

[tool.poetry.dependencies]
python = "^3.12"
fastapi-alchemy = { path = "../../..", develop = true }
alembic = "^1.14.1"
aiosqlite = "^0.21.0"
fastapi = {extras = ["standard"], version = "^0.115.8"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
